Add manual backup

--- a/info/index.html
+++ b/info/index.html
@@ -22,7 +22,7 @@
             <p>Sessions can only live in the data/sessions folder. To switch between sessions, click <span class="b">File > Open Session</span> and type the name, or click Open file and select it from there.</p>
             <p>If you want to know how you performed in your session so far, you can click <span class="b">File > See Statistics</span> to see a graph of your times. It's cool!</p>
             <p>There are some settings you can change. Click <span class="b">Edit > Settings</span>. There you can change the timer and the scramble size, enable/disable inspection, change colors and enable/disable backups.</p>
-            <p>To backup your session, you have to specify a path to a writable folder you want to backup to. Every five solves, only your entire *current* session will be backed up.</p>
+            <p>To backup your session, you have to specify a path to a writable folder you want to backup to. Every five solves, only your entire *current* session will be backed up. You can also backup manually by clicking <span class="b">File > Backup Session Now</span>.</p>
             <p>If you have a backup file of a session and you want to use it, you'll have to rename it to the session name and put it in the data/sessions folder. For example, if you have the backup file <span class="file">backup_2020-10_MySession</span>, then you'll rename it to <span class="file">MySession</span>.</p>
             <p>That's all, folks.</p>
         </div>
